kubernetes/apps/gate/gate/app/gatecam-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatecam
  namespace: gate
spec:
  hostnames:
  - gatecam.${SECRET_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: gate-motion
      namespace: gate
      port: 9081
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
