kubernetes/apps/gate/gate/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: gate
    app.kubernetes.io/name: gate
  name: gate
  namespace: gate
spec:
  hostnames:
  - gate.${SECRET_DOMAIN}
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: gate-gate
      namespace: gate
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
